figured out layout issues

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -3,9 +3,38 @@ body{
 }
 .nav-header{
   margin: 0;
-  padding: 2%;
+  padding: 1%;
   background-color: #F55A5A;
   color: #FFFFFF;
   text-align: center;
   font-size: 40px;
+}
+
+.card {
+  margin: auto;
+  padding-top: 40px;;
+  width: 800px;
+  height: 200px;
+  font-size: 12px;
+  display: flex;
+}
+.card-overview{
+  padding-left: 3%;
+}
+.card-image{
+  width: auto;
+  height: auto;
+}
+
+.card-title{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.card-url{
+  padding-left: 2%;
+}
+
+.card-description{
+  z-index: 2;
 }
